# studiosync

./: .gitignore  Cargo.toml  README.md  SETUP.md  agent.js  audio.rs  daw-bridge.js  daw_bridge.rs  desktop-package.json  entitlements.plist  index.html  install-teacher-mac.command  ipc.rs  main.rs  package-lock.json  package.json  render.yaml  screen.rs  server.js  signaling-server.js  start-agent.command  start.command  tauri-bridge.js  tauri.conf.json  virtual_device.rs  vite.config.js
.claude/: launch.json
archive/: StudioSync-Demo.html  daw-integration-map.html  studiosync-app-v2.html  studiosync-app.html  studiosync-v3.html  studiosync-v4.html  studiosync-v5.html  studiosync-v6.html  studiosync-v7.html  studiosync.html
installer/: StudioSync-Installer.pkg  build-installer.sh
