[package]
name    = "studiosync"
version = "1.0.0"
edition = "2021"
authors = ["StudioSync Team"]

# ── Tauri ──────────────────────────────────────────────────
[dependencies]
tauri = { version = "1.6", features = [
    "system-tray",
    "updater",
    "dialog-open",
    "dialog-save",
    "notification-all",
    "os-all",
    "path-all",
    "fs-read-file",
    "fs-write-file",
    "window-hide",
    "window-show",
    "window-set-focus",
] }

# ── Serialization ──────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Async runtime ─────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Logging ────────────────────────────────────────────────
log            = "0.4"
env_logger     = "0.11"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# ── macOS: CoreAudio (no kext, user-space only) ───────────
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs     = "0.11"
core-foundation  = "0.9"
core-graphics    = { version = "0.23", features = ["highsierra"] }
objc2            = "0.5"
objc2-foundation = "0.2"

# ── Windows: WASAPI + DXGI + SendInput ────────────────────
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
    # Audio
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Devices_Properties",
    # Screen
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    # Input injection
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    # Process detection
    "Win32_System_Threading",
    "Win32_Foundation",
]}

# ── Build ─────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true    # smaller binary
panic         = "abort"

[profile.dev]
opt-level = 0
debug     = true
